--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <script type="text/javascript">System.import('./index.js');</script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,900&display=swap" rel="stylesheet">
+    <script src="https://www.powr.io/powr.js?platform=embed"></script>
+
   </head>
 
     <body className="dx-viewport">
