foto para el link

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property='og:title' content='Comida para todos'/>
+    <meta property='og:image' content='comidaparatodosmockup.png'/>
+    <meta property='og:description' content='Propuesta para web de fundación comida para todos, cliente real'/>
+    <meta property='og:url' content='https://comida-para-todos-28f10.web.app/'/>
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <title>Comida para todos</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
